--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotrestaurant",
+  "name": "friend finder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.15.2",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": "5.3.0"
